--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="left-top">
             <div class="logo">
                 <img class="invert" src="assests/asset 9.svg" alt="">
-                <img id="cross" src="cross.svg" alt="">
+                <img id="cross" src="assests/cross.svg" alt="">
             </div>
             <div class="home flex">
                 <img class="invert" src="assests/asset 11.svg" alt="">
